SERVER-9074 Use the query as the shard key value source in upserts with $ mods